yacc.output
Terminals unused in grammar

    '*'
    '/'
    UMINUS
    ONE
    TWO
    THREE


State 148 conflicts: 3 reduce/reduce
State 238 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce


Grammar

    0 $accept: programstruct $end

    1 programstruct: program_head ';' program_body '.'
    2              | program_head error program_body '.'
    3              | program_head ';' program_body error
    4              | error ';' program_body '.'
    5              | program_head ';' error '.'
    6              | error program_head ';' program_body '.'
    7              | error program_head error program_body '.'
    8              | error program_head ';' program_body error
    9              | error program_head ';' error '.'

   10 program_head: PROGRAM IDENTIFIER '(' idlist ')'
   11             | PROGRAM error '(' idlist ')'
   12             | PROGRAM IDENTIFIER error idlist ')'
   13             | PROGRAM IDENTIFIER '(' error ')'
   14             | PROGRAM IDENTIFIER '(' idlist error
   15             | PROGRAM error
   16             | PROGRAM IDENTIFIER error
   17             | PROGRAM IDENTIFIER '(' error

   18 program_body: const_declarations var_declarations subprogram_declarations compound_statement

   19 idlist: idlist ',' IDENTIFIER
   20       | IDENTIFIER

   21 const_declarations: CONST const_declaration ';'
   22                   | %empty
   23                   | CONST error ';'
   24                   | CONST const_declaration error

   25 const_declaration: const_declaration ';' IDENTIFIER '=' const_value
   26                  | const_declaration ';' IDENTIFIER '=' error
   27                  | IDENTIFIER '=' const_value
   28                  | IDENTIFIER '=' error
   29                  | const_declaration error IDENTIFIER '=' const_value
   30                  | const_declaration ';' IDENTIFIER error const_value
   31                  | IDENTIFIER error const_value

   32 const_value: '+' IDENTIFIER
   33            | '-' IDENTIFIER
   34            | IDENTIFIER
   35            | '+' UINUM
   36            | '-' UINUM
   37            | UINUM
   38            | '+' UFNUM
   39            | '-' UFNUM
   40            | UFNUM
   41            | CHAR

   42 var_declarations: VAR var_declaration ';'
   43                 | %empty
   44                 | VAR error ';'
   45                 | VAR var_declaration error

   46 var_declaration: var_declaration ';' idlist ':' type
   47                | idlist ':' type
   48                | var_declaration error idlist ':' type
   49                | var_declaration ';' idlist error type
   50                | var_declaration ';' idlist ':' error
   51                | idlist ':' error
   52                | idlist error type

   53 type: TYPE
   54     | ARRAY '[' period ']' OF TYPE
   55     | ARRAY error period ']' OF TYPE
   56     | ARRAY '[' period ']' error TYPE
   57     | ARRAY '[' period ']' OF error
   58     | ARRAY error
   59     | ARRAY '[' error
   60     | ARRAY '[' period error

   61 period: period ',' UINUM RANGEDOT UINUM
   62       | period error UINUM RANGEDOT UINUM
   63       | period ',' UINUM error UINUM
   64       | UINUM RANGEDOT UINUM

   65 subprogram_declarations: subprogram_declarations subprogram ';'
   66                        | subprogram_declarations subprogram error
   67                        | %empty

   68 subprogram: subprogram_head ';' subprogram_body
   69           | subprogram_head error subprogram_body

   70 subprogram_head: PROCEDURE IDENTIFIER formal_parameter
   71                | FUNCTION IDENTIFIER formal_parameter ':' TYPE
   72                | FUNCTION error formal_parameter ':' TYPE
   73                | FUNCTION IDENTIFIER formal_parameter error TYPE
   74                | FUNCTION IDENTIFIER formal_parameter ':' error
   75                | FUNCTION IDENTIFIER formal_parameter error
   76                | FUNCTION error
   77                | PROCEDURE error

   78 formal_parameter: '(' parameter_list ')'
   79                 | %empty
   80                 | '(' error
   81                 | '(' parameter_list error

   82 parameter_list: parameter_list ';' parameter
   83               | parameter_list error parameter
   84               | parameter

   85 parameter: var_parameter
   86          | value_parameter

   87 var_parameter: VAR value_parameter
   88              | VAR error

   89 value_parameter: idlist ':' TYPE
   90                | idlist error TYPE
   91                | idlist ':' error
   92                | idlist error

   93 subprogram_body: const_declarations var_declarations compound_statement

   94 compound_statement: _BEGIN statement_list END
   95                   | _BEGIN statement_list error

   96 statement_list: statement_list ';' statement
   97               | statement_list error statement
   98               | statement

   99 statement: variable ASSIGNOP expression
  100          | procedure_call
  101          | compound_statement
  102          | IF expression THEN statement else_part
  103          | IF expression error statement else_part
  104          | FOR IDENTIFIER ASSIGNOP expression TO expression DO statement
  105          | FOR IDENTIFIER error expression TO expression DO statement
  106          | FOR IDENTIFIER ASSIGNOP expression error expression DO statement
  107          | FOR IDENTIFIER ASSIGNOP expression TO expression error statement
  108          | WHILE expression DO statement
  109          | WHILE expression error statement
  110          | REPEAT statement UNTIL expression
  111          | REPEAT statement error expression
  112          | %empty

  113 else_part: ELSE statement
  114          | %empty

  115 variable: IDENTIFIER id_varpart

  116 id_varpart: '[' expression_list ']'
  117           | '[' error
  118           | '[' expression_list error
  119           | %empty

  120 procedure_call: IDENTIFIER
  121               | IDENTIFIER '(' expression_list ')'
  122               | IDENTIFIER '(' expression_list error

  123 expression_list: expression_list ',' expression
  124                | expression
  125                | expression_list error expression

  126 expression: simple_expression RELOP simple_expression
  127           | simple_expression '=' simple_expression
  128           | simple_expression

  129 simple_expression: simple_expression ADDOP term
  130                  | simple_expression ADDOP error term
  131                  | simple_expression '-' term
  132                  | simple_expression '-' error term
  133                  | term

  134 term: term MULOP factor
  135     | term MULOP error factor
  136     | factor

  137 factor: UINUM
  138       | UFNUM
  139       | variable
  140       | IDENTIFIER '(' expression_list ')'
  141       | IDENTIFIER '(' expression_list error
  142       | IDENTIFIER '(' error
  143       | '(' expression ')'
  144       | '(' expression error
  145       | NOT factor
  146       | '-' factor
  147       | CHAR


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 11 13 14 17 78 80 81 121 122 140 141 142 143 144
    ')' (41) 10 11 12 13 78 121 140 143
    '*' (42)
    '+' (43) 32 35 38
    ',' (44) 19 61 63 123
    '-' (45) 33 36 39 131 132 146
    '.' (46) 1 2 4 5 6 7 9
    '/' (47)
    ':' (58) 46 47 48 50 51 71 72 74 89 91
    ';' (59) 1 3 4 5 6 8 9 21 23 25 26 30 42 44 46 49 50 65 68 82 96
    '=' (61) 25 26 27 28 29 127
    '[' (91) 54 56 57 59 60 116 117 118
    ']' (93) 54 55 56 57 116
    error (256) 2 3 4 5 6 7 8 9 11 12 13 14 15 16 17 23 24 26 28 29 30 31 44 45 48 49 50 51 52 55 56 57 58 59 60 62 63 66 69 72 73 74 75 76 77 80 81 83 88 90 91 92 95 97 103 105 106 107 109 111 117 118 122 125 130 132 135 141 142 144
    PROGRAM (258) 10 11 12 13 14 15 16 17
    CONST (259) 21 23 24
    VAR (260) 42 44 45 87 88
    ARRAY (261) 54 55 56 57 58 59 60
    OF (262) 54 55 57
    PROCEDURE (263) 70 77
    FUNCTION (264) 71 72 73 74 75 76
    _BEGIN (265) 94 95
    END (266) 94
    IF (267) 102 103
    THEN (268) 102
    FOR (269) 104 105 106 107
    TO (270) 104 105 107
    DO (271) 104 105 106 108
    ELSE (272) 113
    REPEAT (273) 110 111
    UNTIL (274) 110
    WHILE (275) 108 109
    IDENTIFIER (276) 10 12 13 14 16 17 19 20 25 26 27 28 29 30 31 32 33 34 70 71 73 74 75 104 105 106 107 115 120 121 122 140 141 142
    UINUM (277) 35 36 37 61 62 63 64 137
    UFNUM (278) 38 39 40 138
    CHAR (279) 41 147
    TYPE (280) 53 54 55 56 71 72 73 89 90
    ASSIGNOP (281) 99 104 106 107
    RELOP (282) 126
    ADDOP (283) 129 130
    MULOP (284) 134 135
    NOT (285) 145
    RANGEDOT (286) 61 62 64
    ADD (287)
    MUL (288)
    UMINUS (289)
    LOWER_THAN_ELSE (290)
    ONE (291)
    TWO (292)
    THREE (293)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    programstruct (53)
        on left: 1 2 3 4 5 6 7 8 9
        on right: 0
    program_head (54)
        on left: 10 11 12 13 14 15 16 17
        on right: 1 2 3 5 6 7 8 9
    program_body (55)
        on left: 18
        on right: 1 2 3 4 6 7 8
    idlist (56)
        on left: 19 20
        on right: 10 11 12 14 19 46 47 48 49 50 51 52 89 90 91 92
    const_declarations (57)
        on left: 21 22 23 24
        on right: 18 93
    const_declaration (58)
        on left: 25 26 27 28 29 30 31
        on right: 21 24 25 26 29 30
    const_value (59)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 25 27 29 30 31
    var_declarations (60)
        on left: 42 43 44 45
        on right: 18 93
    var_declaration (61)
        on left: 46 47 48 49 50 51 52
        on right: 42 45 46 48 49 50
    type (62)
        on left: 53 54 55 56 57 58 59 60
        on right: 46 47 48 49 52
    period (63)
        on left: 61 62 63 64
        on right: 54 55 56 57 60 61 62 63
    subprogram_declarations (64)
        on left: 65 66 67
        on right: 18 65 66
    subprogram (65)
        on left: 68 69
        on right: 65 66
    subprogram_head (66)
        on left: 70 71 72 73 74 75 76 77
        on right: 68 69
    formal_parameter (67)
        on left: 78 79 80 81
        on right: 70 71 72 73 74 75
    parameter_list (68)
        on left: 82 83 84
        on right: 78 81 82 83
    parameter (69)
        on left: 85 86
        on right: 82 83 84
    var_parameter (70)
        on left: 87 88
        on right: 85
    value_parameter (71)
        on left: 89 90 91 92
        on right: 86 87
    subprogram_body (72)
        on left: 93
        on right: 68 69
    compound_statement (73)
        on left: 94 95
        on right: 18 93 101
    statement_list (74)
        on left: 96 97 98
        on right: 94 95 96 97
    statement (75)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 96 97 98 102 103 104 105 106 107 108 109 110 111 113
    else_part (76)
        on left: 113 114
        on right: 102 103
    variable (77)
        on left: 115
        on right: 99 139
    id_varpart (78)
        on left: 116 117 118 119
        on right: 115
    procedure_call (79)
        on left: 120 121 122
        on right: 100
    expression_list (80)
        on left: 123 124 125
        on right: 116 118 121 122 123 125 140 141
    expression (81)
        on left: 126 127 128
        on right: 99 102 103 104 105 106 107 108 109 110 111 123 124 125 143 144
    simple_expression (82)
        on left: 129 130 131 132 133
        on right: 126 127 128 129 130 131 132
    term (83)
        on left: 134 135 136
        on right: 129 130 131 132 133 134 135
    factor (84)
        on left: 137 138 139 140 141 142 143 144 145 146 147
        on right: 134 135 136 145 146


State 0

    0 $accept: . programstruct $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    programstruct  go to state 3
    program_head   go to state 4


State 1

    4 programstruct: error . ';' program_body '.'
    6              | error . program_head ';' program_body '.'
    7              | error . program_head error program_body '.'
    8              | error . program_head ';' program_body error
    9              | error . program_head ';' error '.'

    PROGRAM  shift, and go to state 2
    ';'      shift, and go to state 5

    program_head  go to state 6


State 2

   10 program_head: PROGRAM . IDENTIFIER '(' idlist ')'
   11             | PROGRAM . error '(' idlist ')'
   12             | PROGRAM . IDENTIFIER error idlist ')'
   13             | PROGRAM . IDENTIFIER '(' error ')'
   14             | PROGRAM . IDENTIFIER '(' idlist error
   15             | PROGRAM . error
   16             | PROGRAM . IDENTIFIER error
   17             | PROGRAM . IDENTIFIER '(' error

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8


State 3

    0 $accept: programstruct . $end

    $end  shift, and go to state 9


State 4

    1 programstruct: program_head . ';' program_body '.'
    2              | program_head . error program_body '.'
    3              | program_head . ';' program_body error
    5              | program_head . ';' error '.'

    error  shift, and go to state 10
    ';'    shift, and go to state 11


State 5

    4 programstruct: error ';' . program_body '.'

    CONST  shift, and go to state 12

    $default  reduce using rule 22 (const_declarations)

    program_body        go to state 13
    const_declarations  go to state 14


State 6

    6 programstruct: error program_head . ';' program_body '.'
    7              | error program_head . error program_body '.'
    8              | error program_head . ';' program_body error
    9              | error program_head . ';' error '.'

    error  shift, and go to state 15
    ';'    shift, and go to state 16


State 7

   11 program_head: PROGRAM error . '(' idlist ')'
   15             | PROGRAM error .

    '('  shift, and go to state 17

    $default  reduce using rule 15 (program_head)


State 8

   10 program_head: PROGRAM IDENTIFIER . '(' idlist ')'
   12             | PROGRAM IDENTIFIER . error idlist ')'
   13             | PROGRAM IDENTIFIER . '(' error ')'
   14             | PROGRAM IDENTIFIER . '(' idlist error
   16             | PROGRAM IDENTIFIER . error
   17             | PROGRAM IDENTIFIER . '(' error

    error  shift, and go to state 18
    '('    shift, and go to state 19


State 9

    0 $accept: programstruct $end .

    $default  accept


State 10

    2 programstruct: program_head error . program_body '.'

    CONST  shift, and go to state 12

    $default  reduce using rule 22 (const_declarations)

    program_body        go to state 20
    const_declarations  go to state 14


State 11

    1 programstruct: program_head ';' . program_body '.'
    3              | program_head ';' . program_body error
    5              | program_head ';' . error '.'

    error  shift, and go to state 21
    CONST  shift, and go to state 12

    VAR        reduce using rule 22 (const_declarations)
    PROCEDURE  reduce using rule 22 (const_declarations)
    FUNCTION   reduce using rule 22 (const_declarations)
    _BEGIN     reduce using rule 22 (const_declarations)

    program_body        go to state 22
    const_declarations  go to state 14


State 12

   21 const_declarations: CONST . const_declaration ';'
   23                   | CONST . error ';'
   24                   | CONST . const_declaration error

    error       shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    const_declaration  go to state 25


State 13

    4 programstruct: error ';' program_body . '.'

    '.'  shift, and go to state 26


State 14

   18 program_body: const_declarations . var_declarations subprogram_declarations compound_statement

    VAR  shift, and go to state 27

    $default  reduce using rule 43 (var_declarations)

    var_declarations  go to state 28


State 15

    7 programstruct: error program_head error . program_body '.'

    CONST  shift, and go to state 12

    $default  reduce using rule 22 (const_declarations)

    program_body        go to state 29
    const_declarations  go to state 14


State 16

    6 programstruct: error program_head ';' . program_body '.'
    8              | error program_head ';' . program_body error
    9              | error program_head ';' . error '.'

    error  shift, and go to state 30
    CONST  shift, and go to state 12

    VAR        reduce using rule 22 (const_declarations)
    PROCEDURE  reduce using rule 22 (const_declarations)
    FUNCTION   reduce using rule 22 (const_declarations)
    _BEGIN     reduce using rule 22 (const_declarations)

    program_body        go to state 31
    const_declarations  go to state 14


State 17

   11 program_head: PROGRAM error '(' . idlist ')'

    IDENTIFIER  shift, and go to state 32

    idlist  go to state 33


State 18

   12 program_head: PROGRAM IDENTIFIER error . idlist ')'
   16             | PROGRAM IDENTIFIER error .

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 16 (program_head)

    idlist  go to state 34


State 19

   10 program_head: PROGRAM IDENTIFIER '(' . idlist ')'
   13             | PROGRAM IDENTIFIER '(' . error ')'
   14             | PROGRAM IDENTIFIER '(' . idlist error
   17             | PROGRAM IDENTIFIER '(' . error

    error       shift, and go to state 35
    IDENTIFIER  shift, and go to state 32

    idlist  go to state 36


State 20

    2 programstruct: program_head error program_body . '.'

    '.'  shift, and go to state 37


State 21

    5 programstruct: program_head ';' error . '.'

    '.'  shift, and go to state 38


State 22

    1 programstruct: program_head ';' program_body . '.'
    3              | program_head ';' program_body . error

    error  shift, and go to state 39
    '.'    shift, and go to state 40


State 23

   23 const_declarations: CONST error . ';'

    ';'  shift, and go to state 41


State 24

   27 const_declaration: IDENTIFIER . '=' const_value
   28                  | IDENTIFIER . '=' error
   31                  | IDENTIFIER . error const_value

    error  shift, and go to state 42
    '='    shift, and go to state 43


State 25

   21 const_declarations: CONST const_declaration . ';'
   24                   | CONST const_declaration . error
   25 const_declaration: const_declaration . ';' IDENTIFIER '=' const_value
   26                  | const_declaration . ';' IDENTIFIER '=' error
   29                  | const_declaration . error IDENTIFIER '=' const_value
   30                  | const_declaration . ';' IDENTIFIER error const_value

    error  shift, and go to state 44
    ';'    shift, and go to state 45


State 26

    4 programstruct: error ';' program_body '.' .

    $default  reduce using rule 4 (programstruct)


State 27

   42 var_declarations: VAR . var_declaration ';'
   44                 | VAR . error ';'
   45                 | VAR . var_declaration error

    error       shift, and go to state 46
    IDENTIFIER  shift, and go to state 32

    idlist           go to state 47
    var_declaration  go to state 48


State 28

   18 program_body: const_declarations var_declarations . subprogram_declarations compound_statement

    $default  reduce using rule 67 (subprogram_declarations)

    subprogram_declarations  go to state 49


State 29

    7 programstruct: error program_head error program_body . '.'

    '.'  shift, and go to state 50


State 30

    9 programstruct: error program_head ';' error . '.'

    '.'  shift, and go to state 51


State 31

    6 programstruct: error program_head ';' program_body . '.'
    8              | error program_head ';' program_body . error

    error  shift, and go to state 52
    '.'    shift, and go to state 53


State 32

   20 idlist: IDENTIFIER .

    $default  reduce using rule 20 (idlist)


State 33

   11 program_head: PROGRAM error '(' idlist . ')'
   19 idlist: idlist . ',' IDENTIFIER

    ')'  shift, and go to state 54
    ','  shift, and go to state 55


State 34

   12 program_head: PROGRAM IDENTIFIER error idlist . ')'
   19 idlist: idlist . ',' IDENTIFIER

    ')'  shift, and go to state 56
    ','  shift, and go to state 55


State 35

   13 program_head: PROGRAM IDENTIFIER '(' error . ')'
   17             | PROGRAM IDENTIFIER '(' error .

    ')'  shift, and go to state 57

    $default  reduce using rule 17 (program_head)


State 36

   10 program_head: PROGRAM IDENTIFIER '(' idlist . ')'
   14             | PROGRAM IDENTIFIER '(' idlist . error
   19 idlist: idlist . ',' IDENTIFIER

    error  shift, and go to state 58
    ')'    shift, and go to state 59
    ','    shift, and go to state 55


State 37

    2 programstruct: program_head error program_body '.' .

    $default  reduce using rule 2 (programstruct)


State 38

    5 programstruct: program_head ';' error '.' .

    $default  reduce using rule 5 (programstruct)


State 39

    3 programstruct: program_head ';' program_body error .

    $default  reduce using rule 3 (programstruct)


State 40

    1 programstruct: program_head ';' program_body '.' .

    $default  reduce using rule 1 (programstruct)


State 41

   23 const_declarations: CONST error ';' .

    $default  reduce using rule 23 (const_declarations)


State 42

   31 const_declaration: IDENTIFIER error . const_value

    IDENTIFIER  shift, and go to state 60
    UINUM       shift, and go to state 61
    UFNUM       shift, and go to state 62
    CHAR        shift, and go to state 63
    '+'         shift, and go to state 64
    '-'         shift, and go to state 65

    const_value  go to state 66


State 43

   27 const_declaration: IDENTIFIER '=' . const_value
   28                  | IDENTIFIER '=' . error

    error       shift, and go to state 67
    IDENTIFIER  shift, and go to state 60
    UINUM       shift, and go to state 61
    UFNUM       shift, and go to state 62
    CHAR        shift, and go to state 63
    '+'         shift, and go to state 64
    '-'         shift, and go to state 65

    const_value  go to state 68


State 44

   24 const_declarations: CONST const_declaration error .
   29 const_declaration: const_declaration error . IDENTIFIER '=' const_value

    IDENTIFIER  shift, and go to state 69

    $default  reduce using rule 24 (const_declarations)


State 45

   21 const_declarations: CONST const_declaration ';' .
   25 const_declaration: const_declaration ';' . IDENTIFIER '=' const_value
   26                  | const_declaration ';' . IDENTIFIER '=' error
   30                  | const_declaration ';' . IDENTIFIER error const_value

    IDENTIFIER  shift, and go to state 70

    $default  reduce using rule 21 (const_declarations)


State 46

   44 var_declarations: VAR error . ';'

    ';'  shift, and go to state 71


State 47

   19 idlist: idlist . ',' IDENTIFIER
   47 var_declaration: idlist . ':' type
   51                | idlist . ':' error
   52                | idlist . error type

    error  shift, and go to state 72
    ','    shift, and go to state 55
    ':'    shift, and go to state 73


State 48

   42 var_declarations: VAR var_declaration . ';'
   45                 | VAR var_declaration . error
   46 var_declaration: var_declaration . ';' idlist ':' type
   48                | var_declaration . error idlist ':' type
   49                | var_declaration . ';' idlist error type
   50                | var_declaration . ';' idlist ':' error

    error  shift, and go to state 74
    ';'    shift, and go to state 75


State 49

   18 program_body: const_declarations var_declarations subprogram_declarations . compound_statement
   65 subprogram_declarations: subprogram_declarations . subprogram ';'
   66                        | subprogram_declarations . subprogram error

    PROCEDURE  shift, and go to state 76
    FUNCTION   shift, and go to state 77
    _BEGIN     shift, and go to state 78

    subprogram          go to state 79
    subprogram_head     go to state 80
    compound_statement  go to state 81


State 50

    7 programstruct: error program_head error program_body '.' .

    $default  reduce using rule 7 (programstruct)


State 51

    9 programstruct: error program_head ';' error '.' .

    $default  reduce using rule 9 (programstruct)


State 52

    8 programstruct: error program_head ';' program_body error .

    $default  reduce using rule 8 (programstruct)


State 53

    6 programstruct: error program_head ';' program_body '.' .

    $default  reduce using rule 6 (programstruct)


State 54

   11 program_head: PROGRAM error '(' idlist ')' .

    $default  reduce using rule 11 (program_head)


State 55

   19 idlist: idlist ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 82


State 56

   12 program_head: PROGRAM IDENTIFIER error idlist ')' .

    $default  reduce using rule 12 (program_head)


State 57

   13 program_head: PROGRAM IDENTIFIER '(' error ')' .

    $default  reduce using rule 13 (program_head)


State 58

   14 program_head: PROGRAM IDENTIFIER '(' idlist error .

    $default  reduce using rule 14 (program_head)


State 59

   10 program_head: PROGRAM IDENTIFIER '(' idlist ')' .

    $default  reduce using rule 10 (program_head)


State 60

   34 const_value: IDENTIFIER .

    $default  reduce using rule 34 (const_value)


State 61

   37 const_value: UINUM .

    $default  reduce using rule 37 (const_value)


State 62

   40 const_value: UFNUM .

    $default  reduce using rule 40 (const_value)


State 63

   41 const_value: CHAR .

    $default  reduce using rule 41 (const_value)


State 64

   32 const_value: '+' . IDENTIFIER
   35            | '+' . UINUM
   38            | '+' . UFNUM

    IDENTIFIER  shift, and go to state 83
    UINUM       shift, and go to state 84
    UFNUM       shift, and go to state 85


State 65

   33 const_value: '-' . IDENTIFIER
   36            | '-' . UINUM
   39            | '-' . UFNUM

    IDENTIFIER  shift, and go to state 86
    UINUM       shift, and go to state 87
    UFNUM       shift, and go to state 88


State 66

   31 const_declaration: IDENTIFIER error const_value .

    $default  reduce using rule 31 (const_declaration)


State 67

   28 const_declaration: IDENTIFIER '=' error .

    $default  reduce using rule 28 (const_declaration)


State 68

   27 const_declaration: IDENTIFIER '=' const_value .

    $default  reduce using rule 27 (const_declaration)


State 69

   29 const_declaration: const_declaration error IDENTIFIER . '=' const_value

    '='  shift, and go to state 89


State 70

   25 const_declaration: const_declaration ';' IDENTIFIER . '=' const_value
   26                  | const_declaration ';' IDENTIFIER . '=' error
   30                  | const_declaration ';' IDENTIFIER . error const_value

    error  shift, and go to state 90
    '='    shift, and go to state 91


State 71

   44 var_declarations: VAR error ';' .

    $default  reduce using rule 44 (var_declarations)


State 72

   52 var_declaration: idlist error . type

    ARRAY  shift, and go to state 92
    TYPE   shift, and go to state 93

    type  go to state 94


State 73

   47 var_declaration: idlist ':' . type
   51                | idlist ':' . error

    error  shift, and go to state 95
    ARRAY  shift, and go to state 92
    TYPE   shift, and go to state 93

    type  go to state 96


State 74

   45 var_declarations: VAR var_declaration error .
   48 var_declaration: var_declaration error . idlist ':' type

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 45 (var_declarations)

    idlist  go to state 97


State 75

   42 var_declarations: VAR var_declaration ';' .
   46 var_declaration: var_declaration ';' . idlist ':' type
   49                | var_declaration ';' . idlist error type
   50                | var_declaration ';' . idlist ':' error

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 42 (var_declarations)

    idlist  go to state 98


State 76

   70 subprogram_head: PROCEDURE . IDENTIFIER formal_parameter
   77                | PROCEDURE . error

    error       shift, and go to state 99
    IDENTIFIER  shift, and go to state 100


State 77

   71 subprogram_head: FUNCTION . IDENTIFIER formal_parameter ':' TYPE
   72                | FUNCTION . error formal_parameter ':' TYPE
   73                | FUNCTION . IDENTIFIER formal_parameter error TYPE
   74                | FUNCTION . IDENTIFIER formal_parameter ':' error
   75                | FUNCTION . IDENTIFIER formal_parameter error
   76                | FUNCTION . error

    error       shift, and go to state 101
    IDENTIFIER  shift, and go to state 102


State 78

   94 compound_statement: _BEGIN . statement_list END
   95                   | _BEGIN . statement_list error

    _BEGIN      shift, and go to state 78
    IF          shift, and go to state 103
    FOR         shift, and go to state 104
    REPEAT      shift, and go to state 105
    WHILE       shift, and go to state 106
    IDENTIFIER  shift, and go to state 107

    $default  reduce using rule 112 (statement)

    compound_statement  go to state 108
    statement_list      go to state 109
    statement           go to state 110
    variable            go to state 111
    procedure_call      go to state 112


State 79

   65 subprogram_declarations: subprogram_declarations subprogram . ';'
   66                        | subprogram_declarations subprogram . error

    error  shift, and go to state 113
    ';'    shift, and go to state 114


State 80

   68 subprogram: subprogram_head . ';' subprogram_body
   69           | subprogram_head . error subprogram_body

    error  shift, and go to state 115
    ';'    shift, and go to state 116


State 81

   18 program_body: const_declarations var_declarations subprogram_declarations compound_statement .

    $default  reduce using rule 18 (program_body)


State 82

   19 idlist: idlist ',' IDENTIFIER .

    $default  reduce using rule 19 (idlist)


State 83

   32 const_value: '+' IDENTIFIER .

    $default  reduce using rule 32 (const_value)


State 84

   35 const_value: '+' UINUM .

    $default  reduce using rule 35 (const_value)


State 85

   38 const_value: '+' UFNUM .

    $default  reduce using rule 38 (const_value)


State 86

   33 const_value: '-' IDENTIFIER .

    $default  reduce using rule 33 (const_value)


State 87

   36 const_value: '-' UINUM .

    $default  reduce using rule 36 (const_value)


State 88

   39 const_value: '-' UFNUM .

    $default  reduce using rule 39 (const_value)


State 89

   29 const_declaration: const_declaration error IDENTIFIER '=' . const_value

    IDENTIFIER  shift, and go to state 60
    UINUM       shift, and go to state 61
    UFNUM       shift, and go to state 62
    CHAR        shift, and go to state 63
    '+'         shift, and go to state 64
    '-'         shift, and go to state 65

    const_value  go to state 117


State 90

   30 const_declaration: const_declaration ';' IDENTIFIER error . const_value

    IDENTIFIER  shift, and go to state 60
    UINUM       shift, and go to state 61
    UFNUM       shift, and go to state 62
    CHAR        shift, and go to state 63
    '+'         shift, and go to state 64
    '-'         shift, and go to state 65

    const_value  go to state 118


State 91

   25 const_declaration: const_declaration ';' IDENTIFIER '=' . const_value
   26                  | const_declaration ';' IDENTIFIER '=' . error

    error       shift, and go to state 119
    IDENTIFIER  shift, and go to state 60
    UINUM       shift, and go to state 61
    UFNUM       shift, and go to state 62
    CHAR        shift, and go to state 63
    '+'         shift, and go to state 64
    '-'         shift, and go to state 65

    const_value  go to state 120


State 92

   54 type: ARRAY . '[' period ']' OF TYPE
   55     | ARRAY . error period ']' OF TYPE
   56     | ARRAY . '[' period ']' error TYPE
   57     | ARRAY . '[' period ']' OF error
   58     | ARRAY . error
   59     | ARRAY . '[' error
   60     | ARRAY . '[' period error

    error  shift, and go to state 121
    '['    shift, and go to state 122


State 93

   53 type: TYPE .

    $default  reduce using rule 53 (type)


State 94

   52 var_declaration: idlist error type .

    $default  reduce using rule 52 (var_declaration)


State 95

   51 var_declaration: idlist ':' error .

    $default  reduce using rule 51 (var_declaration)


State 96

   47 var_declaration: idlist ':' type .

    $default  reduce using rule 47 (var_declaration)


State 97

   19 idlist: idlist . ',' IDENTIFIER
   48 var_declaration: var_declaration error idlist . ':' type

    ','  shift, and go to state 55
    ':'  shift, and go to state 123


State 98

   19 idlist: idlist . ',' IDENTIFIER
   46 var_declaration: var_declaration ';' idlist . ':' type
   49                | var_declaration ';' idlist . error type
   50                | var_declaration ';' idlist . ':' error

    error  shift, and go to state 124
    ','    shift, and go to state 55
    ':'    shift, and go to state 125


State 99

   77 subprogram_head: PROCEDURE error .

    $default  reduce using rule 77 (subprogram_head)


State 100

   70 subprogram_head: PROCEDURE IDENTIFIER . formal_parameter

    '('  shift, and go to state 126

    $default  reduce using rule 79 (formal_parameter)

    formal_parameter  go to state 127


State 101

   72 subprogram_head: FUNCTION error . formal_parameter ':' TYPE
   76                | FUNCTION error .

    '('  shift, and go to state 126

    ':'       reduce using rule 79 (formal_parameter)
    $default  reduce using rule 76 (subprogram_head)

    formal_parameter  go to state 128


State 102

   71 subprogram_head: FUNCTION IDENTIFIER . formal_parameter ':' TYPE
   73                | FUNCTION IDENTIFIER . formal_parameter error TYPE
   74                | FUNCTION IDENTIFIER . formal_parameter ':' error
   75                | FUNCTION IDENTIFIER . formal_parameter error

    '('  shift, and go to state 126

    $default  reduce using rule 79 (formal_parameter)

    formal_parameter  go to state 129


State 103

  102 statement: IF . expression THEN statement else_part
  103          | IF . expression error statement else_part

    IDENTIFIER  shift, and go to state 130
    UINUM       shift, and go to state 131
    UFNUM       shift, and go to state 132
    CHAR        shift, and go to state 133
    NOT         shift, and go to state 134
    '-'         shift, and go to state 135
    '('         shift, and go to state 136

    variable           go to state 137
    expression         go to state 138
    simple_expression  go to state 139
    term               go to state 140
    factor             go to state 141


State 104

  104 statement: FOR . IDENTIFIER ASSIGNOP expression TO expression DO statement
  105          | FOR . IDENTIFIER error expression TO expression DO statement
  106          | FOR . IDENTIFIER ASSIGNOP expression error expression DO statement
  107          | FOR . IDENTIFIER ASSIGNOP expression TO expression error statement

    IDENTIFIER  shift, and go to state 142


State 105

  110 statement: REPEAT . statement UNTIL expression
  111          | REPEAT . statement error expression

    _BEGIN      shift, and go to state 78
    IF          shift, and go to state 103
    FOR         shift, and go to state 104
    REPEAT      shift, and go to state 105
    WHILE       shift, and go to state 106
    IDENTIFIER  shift, and go to state 107

    $default  reduce using rule 112 (statement)

    compound_statement  go to state 108
    statement           go to state 143
    variable            go to state 111
    procedure_call      go to state 112


State 106

  108 statement: WHILE . expression DO statement
  109          | WHILE . expression error statement

    IDENTIFIER  shift, and go to state 130
    UINUM       shift, and go to state 131
    UFNUM       shift, and go to state 132
    CHAR        shift, and go to state 133
    NOT         shift, and go to state 134
    '-'         shift, and go to state 135
    '('         shift, and go to state 136

    variable           go to state 137
    expression         go to state 144
    simple_expression  go to state 139
    term               go to state 140
    factor             go to state 141


State 107

  115 variable: IDENTIFIER . id_varpart
  120 procedure_call: IDENTIFIER .
  121               | IDENTIFIER . '(' expression_list ')'
  122               | IDENTIFIER . '(' expression_list error

    '('  shift, and go to state 145
    '['  shift, and go to state 146

    ASSIGNOP  reduce using rule 119 (id_varpart)
    $default  reduce using rule 120 (procedure_call)

    id_varpart  go to state 147


State 108

  101 statement: compound_statement .

    $default  reduce using rule 101 (statement)


State 109

   94 compound_statement: _BEGIN statement_list . END
   95                   | _BEGIN statement_list . error
   96 statement_list: statement_list . ';' statement
   97               | statement_list . error statement

    error  shift, and go to state 148
    END    shift, and go to state 149
    ';'    shift, and go to state 150


State 110

   98 statement_list: statement .

    $default  reduce using rule 98 (statement_list)


State 111

   99 statement: variable . ASSIGNOP expression
